# DAM-RS

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  joiner.data  perf.data  perf.data.old
.github/workflows/: rust.yml
benches/: benchmark_mha_par.rs  benchmark_sst.rs  benchmark_templates.rs
dam-core/: Cargo.toml
dam-core/src/: config.rs  lib.rs  log_config.rs  metric.rs
dam-core/src/datastructures/: event_log.rs  identifier.rs  log_graph.rs  mod.rs  sync_unsafe.rs  time.rs  unrolled_linked_list.rs
dam-core/src/logging/: log_functions.rs  log_interface.rs  logger.rs  mod.rs  mongo_logger.rs  null_logger.rs  nullprocessor.rs  registry.rs
dam-core/src/view/: basic.rs  mod.rs  parent.rs
dam-macros/: Cargo.toml
dam-macros/src/: lib.rs
src/: channel.rs  event_log.rs  lib.rs  main.rs  time.rs  types.rs
src/channel/: adapters.rs  channel_id.rs  channel_spec.rs  deadlock.rs  events.rs  flavors.rs  handle.rs  mod.rs  receiver.rs  sender.rs  utils.rs  view_struct.rs
src/channel/receiver/: acyclic.rs  cyclic.rs  mod.rs  terminated.rs  undefined.rs  uninitialized.rs
src/channel/sender/: bounded.rs  mod.rs  terminated.rs  unbounded.rs  uninitialized.rs  void.rs
src/context/: approx_checker_context.rs  broadcast_context.rs  checker_context.rs  consumer_context.rs  function_context.rs  generator_context.rs  mod.rs  parent.rs  print_context.rs  proxy.rs  summary.rs  view.rs
src/datastructures/: identifier.rs  marker.rs  mod.rs  sync_unsafe.rs  time.rs
src/logging/: log_functions.rs  log_interface.rs  mod.rs  mongo_logger.rs  null_logger.rs  registry.rs
src/shim/: coroutines.rs  mod.rs  os_threads.rs
src/simulation/: building.rs  dot.rs  executed.rs  initialized.rs  mod.rs  programdata.rs
src/simulation/logging_options/: mod.rs  mongo.rs
src/templates/: crd_masker.rs  datastore.rs  dram.rs  mod.rs  ops.rs  pcu.rs  pmu.rs  primitive.rs  rd_scanner.rs  vec_ops.rs
src/templates/llops/: binary_op.rs  matmul_w.rs  mod.rs  pipeline_reg.rs
src/templates/moe/test/: mod.rs  test_expert.rs
src/templates/sam/: accumulator.rs  alu.rs  array.rs  crd_manager.rs  crd_masker.rs  joiner.rs  mod.rs  primitive.rs  rd_scanner.rs  repeat.rs  scatter_gather.rs  shape_operator.rs  stkn_dropper.rs  utils.rs  val_dropper.rs  wr_scanner.rs
src/templates/sam/test/: config.rs  mod.rs  test_fixed_multihead_attention_ijklm.rs  test_mat_elemadd.rs  test_matmul_ijk.rs  test_multihead_attention.rs  test_par_matmul_ijk.rs  test_tensor4_multihead_attention_ijklm.rs  test_tensor4_par2_multihead_attention_ijklm.rs  test_tensor4_par4_multihead_attention_ijklm.rs  test_tensor4_par_multihead_attention_ijklm.rs  test_tensor4_par_multihead_attention_ijklm_uneval.rs  test_tensor4_seq_multihead_attention.rs  test_tensor4_softmax.rs
src/templates/streamingattn/: mod.rs  stream_agnostic_attn.rs  stream_binary.rs  stream_outer_product.rs  stream_qkt.rs  stream_qkt_out2.rs  stream_reduce.rs  stream_rowmax.rs  stream_spatial_attn.rs  stream_unary.rs
src/templates/streamingattn/test/: mod.rs  test_seq_agnostic_streaming_attn.rs  test_spatial_streaming_attn.rs  test_streaming_attention.rs  test_streaming_attn.rs
src/types/: mod.rs  scalar.rs  tensor.rs  tuple.rs  unevaluated.rs  vector.rs
src/utility_contexts/: approx_checker_context.rs  broadcast_context.rs  checker_context.rs  consumer_context.rs  function_context.rs  generator_context.rs  mod.rs  trace_context.rs
src/view/: basic.rs  mod.rs  parent.rs
tests/: basic_test.rs  channel_test.rs  error_propagation.rs  tests.rs
tests/deadlock/: simple.rs
