[package]
name = "dam-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.2"
num = "0.4.0"
ndarray = "0.15.6"
ntest = "0.9.0"
dam-macros = { version = "0.1.0", path = "dam-macros" }
dam-core = { version = "0.1.0", path = "dam-core" }
linkme = "0.3.12"
serde = "1.0.171"
serde_json = "1.0.103"
enum_dispatch = "0.3.12"
petgraph = "0.6.3"
rustc-hash = "1.1.0"

# For running different thread priorities and enabling FIFO Execution
thread-priority = "0.13.1"

# For running tests
rand = "0.8.5"
thiserror = "1.0.49"
graphviz-rust = {version = "0.6.6", optional = true}
derive_builder = "0.12.0"
cfg-if = "1.0.0"

[features]
default = ["dot"]
dot = ["dep:graphviz-rust"]
log-mongo = ["dam-core/log-mongo"]

[dev-dependencies]
criterion = "0.5.1"

[profile.release-with-debug]
inherits = "release"
debug = 1
lto = "thin"
codegen-units = 1

[profile.dev.build-override]
codegen-units = 1
opt-level = 3
debug = 1

[[bench]]
name = "benchmark_templates"
harness = false

[[bench]]
name = "benchmark_sst"
harness = false
