[package]
name = "dam-core"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.5.0"
enum_delegate = "0.2.0"
home = "0.5.5"
linkme = "0.3.12"
log = "0.4.19"
serde = {version = "1.0.171", features=["derive"]}
serde_json = "1.0.101"
dam-macros = { version = "0.1.0", path = "../dam-macros" }
rustc-hash = "1.1.0"
thread-priority = "0.13.1"
tokio = { version = "1.32.0", features = ["rt"] }
thiserror = "1.0.49"
crossbeam = { version = "0.8.2", features = ["crossbeam-queue"] }
enum_dispatch = "0.3.12"
derive_more = "0.99.17"

[dependencies.mongodb]
version = "2.7.0"
default_features = false
## Have to use openssl-tls for cross compilation and wsl2.
features = ["sync", "openssl-tls"]

