[package]
name = "dam-core"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum_delegate = "0.2.0"
linkme = "0.3.12"
serde = {version = "1.0.171", features=["derive"]}
rustc-hash = "1.1.0"
thiserror = "1.0.49"
crossbeam = { version = "0.8.2", features = ["crossbeam-queue"] }
derive_more = "0.99.17"
bson = "2.7.0"

[features]
default = []
log-mongo = ["dep:mongodb"]

[dependencies.mongodb]
version = "2.7.0"
default_features = false
optional = true
## Have to use openssl-tls for cross compilation and wsl2.
features = ["sync", "openssl-tls"]

